# flatqube-client

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
flatqube/: __init__.py  __main__.py  cli.py  client.py  config.py  config.yaml  constants.py  fmt.py  models.py  utils.py  version.py
fqinfo/: cli.py  config.py  config.yaml  models.py
