[tool.poetry]
name = "flatqube-info"
version = "0.1.0"
description = "FlatQube info lib and CLI tool"
authors = ["Evgeny Prilepin <esp.home@gmail.com>"]
license = "MIT"
readme = "README.md"

packages = [
    { include = "fqinfo" },
]

[tool.poetry.scripts]
fqinfo = 'fqinfo.cli:cli'

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.2"
omegaconf = "^2.2.0"
appdirs = "^1.4.4"
requests = "^2.27.1"
pydantic = "^1.9.0"
humanize = "^4.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
