[tool.poetry]
name = "flatqube-client"
version = "0.1.1"
description = "FlatQube API client library and CLI tools"
authors = ["Evgeny Prilepin <esp.home@gmail.com>"]
license = "MIT"
readme = "README.md"

packages = [
    { include = "flatqube" },
]

[tool.poetry.scripts]
flatqube = 'flatqube.cli:cli'

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.2"
omegaconf = "^2.2.0"
appdirs = "^1.4.4"
requests = "^2.27.1"
pydantic = "^1.9.0"
humanize = "^4.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
